src/paths/snapshots/mandala__paths__arcs__arc_tests__f32-2d-segment-arc-methods.snap
---
source: src/paths/arcs.rs
expression: "(eval_points, sample_points, derivative_points, normal_points)"
---
(
    [
        Vector2 {
            x: 10.000001,
            y: 20.0,
        },
        Vector2 {
            x: 6.9098306,
            y: 19.510567,
        },
        Vector2 {
            x: 4.122148,
            y: 18.09017,
        },
        Vector2 {
            x: 1.9098291,
            y: 15.8778515,
        },
        Vector2 {
            x: 0.4894352,
            y: 13.09017,
        },
        Vector2 {
            x: 0.0,
            y: 10.000002,
        },
        Vector2 {
            x: 0.48943424,
            y: 6.90983,
        },
        Vector2 {
            x: 1.9098291,
            y: 4.1221485,
        },
        Vector2 {
            x: 4.1221457,
            y: 1.909832,
        },
        Vector2 {
            x: 6.909829,
            y: 0.4894352,
        },
        Vector2 {
            x: 10.0,
            y: 0.0,
        },
    ],
    [
        Vector2 {
            x: 10.000001,
            y: 20.0,
        },
        Vector2 {
            x: 6.5797987,
            y: 19.396927,
        },
        Vector2 {
            x: 3.5721235,
            y: 17.660444,
        },
        Vector2 {
            x: 1.3397465,
            y: 15.0,
        },
        Vector2 {
            x: 0.15192223,
            y: 11.736483,
        },
        Vector2 {
            x: 0.15192223,
            y: 8.263517,
        },
        Vector2 {
            x: 1.3397465,
            y: 5.0000005,
        },
        Vector2 {
            x: 3.572125,
            y: 2.3395543,
        },
        Vector2 {
            x: 6.5797997,
            y: 0.6030731,
        },
        Vector2 {
            x: 10.0,
            y: 0.0,
        },
    ],
    [
        Vector2 {
            x: -31.420677,
            y: 0.0,
        },
        Vector2 {
            x: -29.878025,
            y: -9.708908,
        },
        Vector2 {
            x: -25.419937,
            y: -18.46764,
        },
        Vector2 {
            x: -18.464878,
            y: -25.415794,
        },
        Vector2 {
            x: -9.707526,
            y: -29.875261,
        },
        Vector2 {
            x: 0.0,
            y: -31.415154,
        },
        Vector2 {
            x: 9.708908,
            y: -29.881477,
        },
        Vector2 {
            x: 18.466259,
            y: -25.415794,
        },
        Vector2 {
            x: 25.418556,
            y: -18.46902,
        },
        Vector2 {
            x: 29.881477,
            y: -9.708908,
        },
        Vector2 {
            x: 31.41239,
            y: 0.0,
        },
    ],
    [
        Vector2 {
            x: -0.0,
            y: -1.0,
        },
        Vector2 {
            x: 0.30904433,
            y: -0.95104766,
        },
        Vector2 {
            x: 0.5877639,
            y: -0.80903256,
        },
        Vector2 {
            x: 0.8090288,
            y: -0.5877691,
        },
        Vector2 {
            x: 0.9510521,
            y: -0.30903038,
        },
        Vector2 {
            x: 1.0,
            y: 0.0,
        },
        Vector2 {
            x: 0.95105815,
            y: 0.30901203,
        },
        Vector2 {
            x: 0.8090079,
            y: 0.5877978,
        },
        Vector2 {
            x: 0.58781356,
            y: 0.80899644,
        },
        Vector2 {
            x: 0.30901203,
            y: 0.95105815,
        },
        Vector2 {
            x: -0.0,
            y: 1.0,
        },
    ],
)
