src/paths/snapshots/mandala__paths__arcs__arc_tests__f32-2d-sweep-arc-methods.snap
---
source: src/paths/arcs.rs
expression: "(eval_points, sample_points, derivative_points, normal_points)"
---
(
    [
        Vector2 {
            x: 10.0,
            y: 0.0,
        },
        Vector2 {
            x: 9.8768835,
            y: 1.5643448,
        },
        Vector2 {
            x: 9.510566,
            y: 3.09017,
        },
        Vector2 {
            x: 8.910066,
            y: 4.5399055,
        },
        Vector2 {
            x: 8.09017,
            y: 5.8778524,
        },
        Vector2 {
            x: 7.071068,
            y: 7.071068,
        },
        Vector2 {
            x: 5.877852,
            y: 8.090171,
        },
        Vector2 {
            x: 4.539905,
            y: 8.910066,
        },
        Vector2 {
            x: 3.0901697,
            y: 9.510566,
        },
        Vector2 {
            x: 1.5643449,
            y: 9.8768835,
        },
        Vector2 {
            x: -4.371139e-7,
            y: 10.0,
        },
    ],
    [
        Vector2 {
            x: 10.0,
            y: 0.0,
        },
        Vector2 {
            x: 9.848078,
            y: 1.7364819,
        },
        Vector2 {
            x: 9.396926,
            y: 3.4202015,
        },
        Vector2 {
            x: 8.660254,
            y: 5.0,
        },
        Vector2 {
            x: 7.6604443,
            y: 6.4278765,
        },
        Vector2 {
            x: 6.4278755,
            y: 7.660445,
        },
        Vector2 {
            x: 4.9999995,
            y: 8.6602545,
        },
        Vector2 {
            x: 3.4202003,
            y: 9.396927,
        },
        Vector2 {
            x: 1.7364811,
            y: 9.848078,
        },
        Vector2 {
            x: -4.371139e-7,
            y: 10.0,
        },
    ],
    [
        Vector2 {
            x: 0.0,
            y: 15.702821,
        },
        Vector2 {
            x: -2.45692,
            y: 15.514572,
        },
        Vector2 {
            x: -4.854454,
            y: 14.939358,
        },
        Vector2 {
            x: -7.130454,
            y: 13.995743,
        },
        Vector2 {
            x: -9.232439,
            y: 12.707207,
        },
        Vector2 {
            x: -11.107239,
            y: 11.107239,
        },
        Vector2 {
            x: -12.709278,
            y: 9.23382,
        },
        Vector2 {
            x: -13.995743,
            y: 7.130454,
        },
        Vector2 {
            x: -14.940739,
            y: 4.854454,
        },
        Vector2 {
            x: -15.516298,
            y: 2.45692,
        },
        Vector2 {
            x: -15.707922,
            y: 0.0,
        },
    ],
    [
        Vector2 {
            x: -1.0,
            y: 0.0,
        },
        Vector2 {
            x: -0.9876918,
            y: -0.15641293,
        },
        Vector2 {
            x: -0.9510497,
            y: -0.30903786,
        },
        Vector2 {
            x: -0.8910254,
            y: -0.45395347,
        },
        Vector2 {
            x: -0.80901355,
            y: -0.58778995,
        },
        Vector2 {
            x: -0.7071068,
            y: -0.7071068,
        },
        Vector2 {
            x: -0.58778477,
            y: -0.8090173,
        },
        Vector2 {
            x: -0.45395347,
            y: -0.8910254,
        },
        Vector2 {
            x: -0.30901203,
            y: -0.95105815,
        },
        Vector2 {
            x: -0.15639594,
            y: -0.98769444,
        },
        Vector2 {
            x: -0.0,
            y: -0.99999994,
        },
    ],
)
