src/paths/snapshots/mandala__paths__arcs__arc_tests__f32-3d-segment-arc-methods.snap
---
source: src/paths/arcs.rs
expression: "(eval_points, sample_points, derivative_points, normal_points)"
---
(
    [
        Vector3 {
            x: 10.000001,
            y: 20.0,
            z: 0.0,
        },
        Vector3 {
            x: 6.9098306,
            y: 19.510567,
            z: 0.0,
        },
        Vector3 {
            x: 4.122148,
            y: 18.09017,
            z: 0.0,
        },
        Vector3 {
            x: 1.9098291,
            y: 15.8778515,
            z: 0.0,
        },
        Vector3 {
            x: 0.4894352,
            y: 13.09017,
            z: 0.0,
        },
        Vector3 {
            x: 0.0,
            y: 10.000002,
            z: 0.0,
        },
        Vector3 {
            x: 0.48943424,
            y: 6.90983,
            z: 0.0,
        },
        Vector3 {
            x: 1.9098291,
            y: 4.1221485,
            z: 0.0,
        },
        Vector3 {
            x: 4.1221457,
            y: 1.909832,
            z: 0.0,
        },
        Vector3 {
            x: 6.909829,
            y: 0.4894352,
            z: 0.0,
        },
        Vector3 {
            x: 10.0,
            y: 0.0,
            z: 0.0,
        },
    ],
    [
        Vector3 {
            x: 10.000001,
            y: 20.0,
            z: 0.0,
        },
        Vector3 {
            x: 6.5797987,
            y: 19.396927,
            z: 0.0,
        },
        Vector3 {
            x: 3.5721235,
            y: 17.660444,
            z: 0.0,
        },
        Vector3 {
            x: 1.3397465,
            y: 15.0,
            z: 0.0,
        },
        Vector3 {
            x: 0.15192223,
            y: 11.736483,
            z: 0.0,
        },
        Vector3 {
            x: 0.15192223,
            y: 8.263517,
            z: 0.0,
        },
        Vector3 {
            x: 1.3397465,
            y: 5.0000005,
            z: 0.0,
        },
        Vector3 {
            x: 3.572125,
            y: 2.3395543,
            z: 0.0,
        },
        Vector3 {
            x: 6.5797997,
            y: 0.6030731,
            z: 0.0,
        },
        Vector3 {
            x: 10.0,
            y: 0.0,
            z: 0.0,
        },
    ],
    [
        Vector3 {
            x: -31.420677,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: -29.878025,
            y: -9.708908,
            z: 0.0,
        },
        Vector3 {
            x: -25.419937,
            y: -18.46764,
            z: 0.0,
        },
        Vector3 {
            x: -18.464878,
            y: -25.415794,
            z: 0.0,
        },
        Vector3 {
            x: -9.707526,
            y: -29.875261,
            z: 0.0,
        },
        Vector3 {
            x: 0.0,
            y: -31.415154,
            z: 0.0,
        },
        Vector3 {
            x: 9.708908,
            y: -29.881477,
            z: 0.0,
        },
        Vector3 {
            x: 18.466259,
            y: -25.415794,
            z: 0.0,
        },
        Vector3 {
            x: 25.418556,
            y: -18.46902,
            z: 0.0,
        },
        Vector3 {
            x: 29.881477,
            y: -9.708908,
            z: 0.0,
        },
        Vector3 {
            x: 31.41239,
            y: 0.0,
            z: 0.0,
        },
    ],
    [
        Vector3 {
            x: 0.0,
            y: 1.0,
            z: -0.0,
        },
        Vector3 {
            x: -0.2939159,
            y: 0.9044916,
            z: 0.30904433,
        },
        Vector3 {
            x: -0.47552013,
            y: 0.6545336,
            z: 0.5877639,
        },
        Vector3 {
            x: -0.47552213,
            y: 0.3454724,
            z: 0.8090288,
        },
        Vector3 {
            x: -0.293904,
            y: 0.09549987,
            z: 0.9510521,
        },
        Vector3 {
            x: 0.0,
            y: 0.0,
            z: 1.0,
        },
        Vector3 {
            x: 0.29388842,
            y: 0.09548837,
            z: 0.95105815,
        },
        Vector3 {
            x: 0.47553307,
            y: 0.34550625,
            z: 0.8090079,
        },
        Vector3 {
            x: 0.4755391,
            y: 0.6544752,
            z: 0.58781356,
        },
        Vector3 {
            x: 0.29388842,
            y: 0.9045116,
            z: 0.30901203,
        },
        Vector3 {
            x: -0.0,
            y: 1.0,
            z: -0.0,
        },
    ],
)
