src/paths/snapshots/mandala__paths__arcs__arc_tests__f32-3d-segment-arc.snap
---
source: src/paths/arcs.rs
expression: points
---
[
    Vector3 {
        x: 10.000001,
        y: 20.0,
        z: 0.0,
    },
    Vector3 {
        x: 6.5797987,
        y: 19.396927,
        z: 0.0,
    },
    Vector3 {
        x: 3.5721235,
        y: 17.660444,
        z: 0.0,
    },
    Vector3 {
        x: 1.3397465,
        y: 15.0,
        z: 0.0,
    },
    Vector3 {
        x: 0.15192223,
        y: 11.736483,
        z: 0.0,
    },
    Vector3 {
        x: 0.15192223,
        y: 8.263517,
        z: 0.0,
    },
    Vector3 {
        x: 1.3397465,
        y: 5.0000005,
        z: 0.0,
    },
    Vector3 {
        x: 3.572125,
        y: 2.3395543,
        z: 0.0,
    },
    Vector3 {
        x: 6.5797997,
        y: 0.6030731,
        z: 0.0,
    },
    Vector3 {
        x: 10.0,
        y: 0.0,
        z: 0.0,
    },
]
