src/paths/snapshots/mandala__paths__arcs__arc_tests__f32-3d-sweep-arc-methods.snap
---
source: src/paths/arcs.rs
expression: "(eval_points, sample_points, derivative_points, normal_points)"
---
(
    [
        Vector3 {
            x: 10.0,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: 9.8768835,
            y: 1.5643448,
            z: 0.0,
        },
        Vector3 {
            x: 9.510566,
            y: 3.09017,
            z: 0.0,
        },
        Vector3 {
            x: 8.910066,
            y: 4.5399055,
            z: 0.0,
        },
        Vector3 {
            x: 8.09017,
            y: 5.8778524,
            z: 0.0,
        },
        Vector3 {
            x: 7.071068,
            y: 7.071068,
            z: 0.0,
        },
        Vector3 {
            x: 5.877852,
            y: 8.090171,
            z: 0.0,
        },
        Vector3 {
            x: 4.539905,
            y: 8.910066,
            z: 0.0,
        },
        Vector3 {
            x: 3.0901697,
            y: 9.510566,
            z: 0.0,
        },
        Vector3 {
            x: 1.5643449,
            y: 9.8768835,
            z: 0.0,
        },
        Vector3 {
            x: -4.371139e-7,
            y: 10.0,
            z: 0.0,
        },
    ],
    [
        Vector3 {
            x: 10.0,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: 9.848078,
            y: 1.7364819,
            z: 0.0,
        },
        Vector3 {
            x: 9.396926,
            y: 3.4202015,
            z: 0.0,
        },
        Vector3 {
            x: 8.660254,
            y: 5.0,
            z: 0.0,
        },
        Vector3 {
            x: 7.6604443,
            y: 6.4278765,
            z: 0.0,
        },
        Vector3 {
            x: 6.4278755,
            y: 7.660445,
            z: 0.0,
        },
        Vector3 {
            x: 4.9999995,
            y: 8.6602545,
            z: 0.0,
        },
        Vector3 {
            x: 3.4202003,
            y: 9.396927,
            z: 0.0,
        },
        Vector3 {
            x: 1.7364811,
            y: 9.848078,
            z: 0.0,
        },
        Vector3 {
            x: -4.371139e-7,
            y: 10.0,
            z: 0.0,
        },
    ],
    [
        Vector3 {
            x: 0.0,
            y: 15.702821,
            z: 0.0,
        },
        Vector3 {
            x: -2.45692,
            y: 15.514572,
            z: 0.0,
        },
        Vector3 {
            x: -4.854454,
            y: 14.939358,
            z: 0.0,
        },
        Vector3 {
            x: -7.130454,
            y: 13.995743,
            z: 0.0,
        },
        Vector3 {
            x: -9.232439,
            y: 12.707207,
            z: 0.0,
        },
        Vector3 {
            x: -11.107239,
            y: 11.107239,
            z: 0.0,
        },
        Vector3 {
            x: -12.709278,
            y: 9.23382,
            z: 0.0,
        },
        Vector3 {
            x: -13.995743,
            y: 7.130454,
            z: 0.0,
        },
        Vector3 {
            x: -14.940739,
            y: 4.854454,
            z: 0.0,
        },
        Vector3 {
            x: -15.516298,
            y: 2.45692,
            z: 0.0,
        },
        Vector3 {
            x: -15.707922,
            y: 0.0,
            z: 0.0,
        },
    ],
    [
        Vector3 {
            x: -0.0,
            y: 0.0,
            z: -1.0,
        },
        Vector3 {
            x: 0.15448777,
            y: 0.024464846,
            z: -0.9876918,
        },
        Vector3 {
            x: 0.29391035,
            y: 0.09550452,
            z: -0.9510497,
        },
        Vector3 {
            x: 0.4044841,
            y: 0.2060737,
            z: -0.8910254,
        },
        Vector3 {
            x: 0.47553003,
            y: 0.34549707,
            z: -0.80901355,
        },
        Vector3 {
            x: 0.50000006,
            y: 0.49999994,
            z: -0.7071068,
        },
        Vector3 {
            x: 0.47552803,
            y: 0.65450907,
            z: -0.58778477,
        },
        Vector3 {
            x: 0.4044841,
            y: 0.79392624,
            z: -0.45395347,
        },
        Vector3 {
            x: 0.29388842,
            y: 0.9045116,
            z: -0.30901203,
        },
        Vector3 {
            x: 0.1544714,
            y: 0.9755403,
            z: -0.15639594,
        },
        Vector3 {
            x: 0.0,
            y: 1.0,
            z: -0.0,
        },
    ],
)
