src/paths/snapshots/mandala__paths__arcs__arc_tests__f32-3d-sweep-arc.snap
---
source: src/paths/arcs.rs
expression: points
---
[
    Vector3 {
        x: 10.0,
        y: 0.0,
        z: 0.0,
    },
    Vector3 {
        x: 9.848078,
        y: 1.7364819,
        z: 0.0,
    },
    Vector3 {
        x: 9.396926,
        y: 3.4202015,
        z: 0.0,
    },
    Vector3 {
        x: 8.660254,
        y: 5.0,
        z: 0.0,
    },
    Vector3 {
        x: 7.6604443,
        y: 6.4278765,
        z: 0.0,
    },
    Vector3 {
        x: 6.4278755,
        y: 7.660445,
        z: 0.0,
    },
    Vector3 {
        x: 4.9999995,
        y: 8.6602545,
        z: 0.0,
    },
    Vector3 {
        x: 3.4202003,
        y: 9.396927,
        z: 0.0,
    },
    Vector3 {
        x: 1.7364811,
        y: 9.848078,
        z: 0.0,
    },
    Vector3 {
        x: -4.371139e-7,
        y: 10.0,
        z: 0.0,
    },
]
