src/paths/snapshots/mandala__paths__arcs__arc_tests__f64-3d-segment-arc-methods.snap
---
source: src/paths/arcs.rs
expression: "(eval_points, sample_points, derivative_points, normal_points)"
---
(
    [
        Vector3 {
            x: 10.0,
            y: 20.0,
            z: 0.0,
        },
        Vector3 {
            x: 6.909830056250526,
            y: 19.510565162951536,
            z: 0.0,
        },
        Vector3 {
            x: 4.12214747707527,
            y: 18.090169943749473,
            z: 0.0,
        },
        Vector3 {
            x: 1.9098300562505273,
            y: 15.877852522924734,
            z: 0.0,
        },
        Vector3 {
            x: 0.48943483704846535,
            y: 13.090169943749475,
            z: 0.0,
        },
        Vector3 {
            x: 0.0,
            y: 10.000000000000002,
            z: 0.0,
        },
        Vector3 {
            x: 0.4894348370484636,
            y: 6.909830056250527,
            z: 0.0,
        },
        Vector3 {
            x: 1.9098300562505255,
            y: 4.12214747707527,
            z: 0.0,
        },
        Vector3 {
            x: 4.122147477075267,
            y: 1.9098300562505273,
            z: 0.0,
        },
        Vector3 {
            x: 6.909830056250525,
            y: 0.48943483704846535,
            z: 0.0,
        },
        Vector3 {
            x: 9.999999999999998,
            y: 0.0,
            z: 0.0,
        },
    ],
    [
        Vector3 {
            x: 10.0,
            y: 20.0,
            z: 0.0,
        },
        Vector3 {
            x: 6.579798566743313,
            y: 19.396926207859085,
            z: 0.0,
        },
        Vector3 {
            x: 3.5721239031346075,
            y: 17.66044443118978,
            z: 0.0,
        },
        Vector3 {
            x: 1.3397459621556145,
            y: 15.000000000000004,
            z: 0.0,
        },
        Vector3 {
            x: 0.1519224698779187,
            y: 11.736481776669303,
            z: 0.0,
        },
        Vector3 {
            x: 0.1519224698779187,
            y: 8.2635182233307,
            z: 0.0,
        },
        Vector3 {
            x: 1.339745962155611,
            y: 5.000000000000002,
            z: 0.0,
        },
        Vector3 {
            x: 3.572123903134604,
            y: 2.339555568810221,
            z: 0.0,
        },
        Vector3 {
            x: 6.579798566743316,
            y: 0.6030737921409148,
            z: 0.0,
        },
        Vector3 {
            x: 9.999999999999998,
            y: 0.0,
            z: 0.0,
        },
    ],
    [
        Vector3 {
            x: -31.41592663526535,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: -29.878321588039398,
            y: -9.708055257797241,
            z: 0.0,
        },
        Vector3 {
            x: -25.416018426418304,
            y: -18.465818405151367,
            z: 0.0,
        },
        Vector3 {
            x: -18.465818285942078,
            y: -25.416018426418304,
            z: 0.0,
        },
        Vector3 {
            x: -9.708055198192596,
            y: -29.878321588039398,
            z: 0.0,
        },
        Vector3 {
            x: 0.0,
            y: -31.41592651605606,
            z: 0.0,
        },
        Vector3 {
            x: 9.708055198192596,
            y: -29.87832161784172,
            z: 0.0,
        },
        Vector3 {
            x: 18.465818285942078,
            y: -25.416018426418304,
            z: 0.0,
        },
        Vector3 {
            x: 25.416018187999725,
            y: -18.465818107128143,
            z: 0.0,
        },
        Vector3 {
            x: 29.87832134962082,
            y: -9.708055078983307,
            z: 0.0,
        },
        Vector3 {
            x: 31.415926218032837,
            y: 0.0,
            z: 0.0,
        },
    ],
    [
        Vector3 {
            x: 0.0,
            y: 1.0,
            z: -0.0,
        },
        Vector3 {
            x: -0.2938926281903497,
            y: 0.9045084957023386,
            z: 0.30901699677794653,
        },
        Vector3 {
            x: -0.4755282591485865,
            y: 0.6545084941066828,
            z: 0.5877852549131504,
        },
        Vector3 {
            x: -0.4755282581999489,
            y: 0.34549150297371156,
            z: 0.8090169942753295,
        },
        Vector3 {
            x: -0.2938926267305468,
            y: 0.09549150323705291,
            z: 0.9510565160719667,
        },
        Vector3 {
            x: 0.0,
            y: 2.220446049250313e-16,
            z: 0.9999999999999999,
        },
        Vector3 {
            x: 0.2938926264933875,
            y: 0.09549150306474619,
            z: 0.9510565161625537,
        },
        Vector3 {
            x: 0.4755282581999489,
            y: 0.34549150297371156,
            z: 0.8090169942753295,
        },
        Vector3 {
            x: 0.47552825815544364,
            y: 0.6545084971632618,
            z: 0.587785252313069,
        },
        Vector3 {
            x: 0.2938926257082159,
            y: 0.9045084975057143,
            z: 0.3090169938600233,
        },
        Vector3 {
            x: -0.0,
            y: 1.0,
            z: -0.0,
        },
    ],
)
