src/paths/snapshots/mandala__paths__arcs__arc_tests__f64-3d-segment-arc.snap
---
source: src/paths/arcs.rs
expression: points
---
[
    Vector3 {
        x: 10.0,
        y: 20.0,
        z: 0.0,
    },
    Vector3 {
        x: 6.579798566743313,
        y: 19.396926207859085,
        z: 0.0,
    },
    Vector3 {
        x: 3.5721239031346075,
        y: 17.66044443118978,
        z: 0.0,
    },
    Vector3 {
        x: 1.3397459621556145,
        y: 15.000000000000004,
        z: 0.0,
    },
    Vector3 {
        x: 0.1519224698779187,
        y: 11.736481776669303,
        z: 0.0,
    },
    Vector3 {
        x: 0.1519224698779187,
        y: 8.2635182233307,
        z: 0.0,
    },
    Vector3 {
        x: 1.339745962155611,
        y: 5.000000000000002,
        z: 0.0,
    },
    Vector3 {
        x: 3.572123903134604,
        y: 2.339555568810221,
        z: 0.0,
    },
    Vector3 {
        x: 6.579798566743316,
        y: 0.6030737921409148,
        z: 0.0,
    },
    Vector3 {
        x: 9.999999999999998,
        y: 0.0,
        z: 0.0,
    },
]
