src/paths/snapshots/mandala__paths__arcs__arc_tests__f64-3d-sweep-arc-methods.snap
---
source: src/paths/arcs.rs
expression: "(eval_points, sample_points, derivative_points, normal_points)"
---
(
    [
        Vector3 {
            x: 10.0,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: 9.876883405951379,
            y: 1.5643446504023086,
            z: 0.0,
        },
        Vector3 {
            x: 9.510565162951535,
            y: 3.090169943749474,
            z: 0.0,
        },
        Vector3 {
            x: 8.910065241883679,
            y: 4.5399049973954675,
            z: 0.0,
        },
        Vector3 {
            x: 8.090169943749475,
            y: 5.877852522924732,
            z: 0.0,
        },
        Vector3 {
            x: 7.0710678118654755,
            y: 7.071067811865475,
            z: 0.0,
        },
        Vector3 {
            x: 5.877852522924733,
            y: 8.090169943749473,
            z: 0.0,
        },
        Vector3 {
            x: 4.539904997395468,
            y: 8.910065241883679,
            z: 0.0,
        },
        Vector3 {
            x: 3.0901699437494745,
            y: 9.510565162951535,
            z: 0.0,
        },
        Vector3 {
            x: 1.5643446504023093,
            y: 9.876883405951379,
            z: 0.0,
        },
        Vector3 {
            x: 6.123233995736766e-16,
            y: 10.0,
            z: 0.0,
        },
    ],
    [
        Vector3 {
            x: 10.0,
            y: 0.0,
            z: 0.0,
        },
        Vector3 {
            x: 9.84807753012208,
            y: 1.7364817766693033,
            z: 0.0,
        },
        Vector3 {
            x: 9.396926207859085,
            y: 3.420201433256687,
            z: 0.0,
        },
        Vector3 {
            x: 8.660254037844387,
            y: 4.999999999999999,
            z: 0.0,
        },
        Vector3 {
            x: 7.660444431189781,
            y: 6.4278760968653925,
            z: 0.0,
        },
        Vector3 {
            x: 6.427876096865393,
            y: 7.66044443118978,
            z: 0.0,
        },
        Vector3 {
            x: 5.000000000000001,
            y: 8.660254037844386,
            z: 0.0,
        },
        Vector3 {
            x: 3.4202014332566884,
            y: 9.396926207859083,
            z: 0.0,
        },
        Vector3 {
            x: 1.7364817766693041,
            y: 9.84807753012208,
            z: 0.0,
        },
        Vector3 {
            x: 6.123233995736766e-16,
            y: 10.0,
            z: 0.0,
        },
    ],
    [
        Vector3 {
            x: 0.0,
            y: 15.707963270667346,
            z: 0.0,
        },
        Vector3 {
            x: -2.4572668075561523,
            y: 15.51457217335701,
            z: 0.0,
        },
        Vector3 {
            x: -4.854027628898621,
            y: 14.939160838723183,
            z: 0.0,
        },
        Vector3 {
            x: -7.1312660574913025,
            y: 13.995897769927979,
            z: 0.0,
        },
        Vector3 {
            x: -9.232909142971039,
            y: 12.708009213209152,
            z: 0.0,
        },
        Vector3 {
            x: -11.107207298278809,
            y: 11.107207357883453,
            z: 0.0,
        },
        Vector3 {
            x: -12.708009213209152,
            y: 9.232909142971039,
            z: 0.0,
        },
        Vector3 {
            x: -13.995897740125656,
            y: 7.1312660574913025,
            z: 0.0,
        },
        Vector3 {
            x: -14.939160823822021,
            y: 4.854027569293976,
            z: 0.0,
        },
        Vector3 {
            x: -15.514572158455849,
            y: 2.4572668075561523,
            z: 0.0,
        },
        Vector3 {
            x: -15.707963258028027,
            y: 0.0,
            z: 0.0,
        },
    ],
    [
        Vector3 {
            x: -0.0,
            y: 0.0,
            z: -1.0,
        },
        Vector3 {
            x: 0.15450849581231907,
            y: 0.02447174140560837,
            z: -0.98768834082133,
        },
        Vector3 {
            x: 0.29389262747887174,
            y: 0.09549150378074212,
            z: -0.9510565157861324,
        },
        Vector3 {
            x: 0.4045084956934823,
            y: 0.20610737179746075,
            z: -0.8910065253422891,
        },
        Vector3 {
            x: 0.4755282581999489,
            y: 0.34549150297371156,
            z: -0.8090169942753295,
        },
        Vector3 {
            x: 0.4999999999999999,
            y: 0.4999999973168484,
            z: -0.7071067830838222,
        },
        Vector3 {
            x: 0.4755282581999489,
            y: 0.6545084970262887,
            z: -0.5877852524295853,
        },
        Vector3 {
            x: 0.40450849619976803,
            y: 0.7938926275056968,
            z: -0.4539904982423126,
        },
        Vector3 {
            x: 0.29389262479642536,
            y: 0.904508498168169,
            z: -0.30901699278814915,
        },
        Vector3 {
            x: 0.15450849595345545,
            y: 0.9755282585485336,
            z: -0.15643446375868195,
        },
        Vector3 {
            x: 0.0,
            y: 1.0,
            z: -0.0,
        },
    ],
)
