src/paths/snapshots/mandala__paths__arcs__arc_tests__f64-3d-sweep-arc.snap
---
source: src/paths/arcs.rs
expression: points
---
[
    Vector3 {
        x: 10.0,
        y: 0.0,
        z: 0.0,
    },
    Vector3 {
        x: 9.84807753012208,
        y: 1.7364817766693033,
        z: 0.0,
    },
    Vector3 {
        x: 9.396926207859085,
        y: 3.420201433256687,
        z: 0.0,
    },
    Vector3 {
        x: 8.660254037844387,
        y: 4.999999999999999,
        z: 0.0,
    },
    Vector3 {
        x: 7.660444431189781,
        y: 6.4278760968653925,
        z: 0.0,
    },
    Vector3 {
        x: 6.427876096865393,
        y: 7.66044443118978,
        z: 0.0,
    },
    Vector3 {
        x: 5.000000000000001,
        y: 8.660254037844386,
        z: 0.0,
    },
    Vector3 {
        x: 3.4202014332566884,
        y: 9.396926207859083,
        z: 0.0,
    },
    Vector3 {
        x: 1.7364817766693041,
        y: 9.84807753012208,
        z: 0.0,
    },
    Vector3 {
        x: 6.123233995736766e-16,
        y: 10.0,
        z: 0.0,
    },
]
